--- a/views/header.ejs
+++ b/views/header.ejs
@@ -7,10 +7,129 @@
       <meta name="apple-mobile-web-app-status-bar-style" content="black">
       <title>Home</title>
       <link rel="stylesheet" href="/framework7/framework7-icons-master/css/framework7-icons.css" />
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <link rel="stylesheet" href="/framework7/dist/css/framework7.min.css" />
       <link href="https://fonts.googleapis.com/css?family=Russo+One|Merienda|Scada|Pattaya|Nobile" rel="stylesheet">
       <style>
+            .userprofile {
+                  background: url(http://maxartkiller.in/website/maxsmart/max_smart/img/proflebg.png) no-repeat #5c6693;
+                  background-size: 100%;
+                  padding-top: 20px;
+                  padding-bottom: 0px;
+
+            }
+
+            .tileCardTL {
+                  justify-content: center;
+                  width: 100%;
+                  border-bottom: 1px solid #fff;
+                  border-right: 1px solid #fff;
+                  border-left: 0px;
+                  border-top: 0px;
+                  padding: 50% 0px 50% 0px;
+                  opacity: 0.9;
+
+
+            }
+
+
+
+            .tileCardTR {
+                  justify-content: center;
+                  width: 100%;
+                  border-style: solid;
+                  border-color: #fff;
+                  border-bottom: 1px solid #fff;
+                  border-right: 0px solid #fff;
+                  border-left: 0px;
+                  border-top: 0px;
+
+                  padding: 40% 0px 40% 0px;
+                  opacity: 0.9;
+
+
+
+            }
+
+            .tileCardML {
+                  justify-content: center;
+                  width: 100%;
+                  border-bottom: 1px solid #fff;
+                  border-right: 1px solid #fff;
+                  border-left: 0px;
+                  border-top: 0px;
+                  padding: 30% 0px 30% 0px;
+                  opacity: 0.9;
+
+            }
+
+            .tileCardMR {
+                  justify-content: center;
+                  width: 100%;
+                  border-bottom: 1px solid #fff;
+                  border-right: 0px solid #fff;
+                  border-left: 0px;
+                  border-top: 0px;
+                  padding: 50% 0px 50% 0px;
+                  opacity: 0.9;
+
+            }
+
+            .tileCardBL {
+                  justify-content: center;
+                  width: 100%;
+                  border-bottom: 0px solid #fff;
+                  border-right: 1px solid #fff;
+                  border-left: 0px;
+                  border-top: 0px;
+                  padding: 50% 0px 50% 0px;
+                  opacity: 0.9;
+
+            }
+
+            .tileCardBR {
+                  justify-content: center;
+                  width: 100%;
+                  border-bottom: 0px solid #fff;
+                  border-right: 0px solid #fff;
+                  border-left: 0px;
+                  border-top: 0px;
+                  padding: 40% 0px 40% 0px;
+                  opacity: 0.9;
+
+            }
+
+            .icon-container {
+                  width: 100%;
+                  text-align: center;
+            }
+
+            .mainIcon {
+                  font-size: 50px;
+                  color: #fff;
+            }
+
+            .mainIcon2 {
+                  font-size: 102px;
+                  color: #fff;
+            }
+
+            .title-text {
+                  text-align: center;
+
+            }
+
+            .title-text h6 {
+                  color: #fff;
+                  font-size: 10px;
+                  margin: 0 0 0 0;
+            }
+
+            .tileContent {
+                  display: block;
+            }
+
             .demo-card-header-pic .card-header {
                   height: 60vw;
                   background-size: cover;
