--- a/views/user_home.ejs
+++ b/views/user_home.ejs
@@ -1,47 +1,64 @@
 <%-include header.ejs%>
     <div class="panel-overlay"></div>
-    <div class="panel panel-left panel-cover <%=theme%> bg-color-black">
-        <div class="block" style="padding-bottom: 0px;margin-bottom: 0px;border-bottom: 1px solid #383333">
+    <div class="panel panel-left panel-cover <%=theme%>">
+        <div class="block bg-color-blue userprofile" style="margin-bottom: 0px;margin-top: 0px;">
             <div class="icon-section" style="height: 90px;position: relative;left: 25%;">
-                <img src="/images/user-512.png" style="height: 100%; width: 50%;">
+                <img src="https://cdn1.iconfinder.com/data/icons/circle-outlines/512/User_Account_Person_Avatar_Profile_Man-512.png" style="height: 100%; width: 50%;">
             </div>
             <div class="text-content">
-                <p class="text-color-white" style="text-align: center;">
-                    Hi
-                    <%=user.fname+" "+user.lname%>!!
+                <p class="text-color-white" style="text-align: center;margin-bottom: 0px;padding-bottom: 21px;">
+                    <%=user.fname+" "+user.lname%>
                 </p>
             </div>
         </div>
-        <div class="list links-list no-hairlines bg-color-black" style="margin-top:0px">
-            <ul>
-                <li class="bg-color-black no-hairlines">
-                    <a href="#" class="panel-close  text-color-white" id="homePage-link" style="font-size: 15px;border-bottom: 1px solid #383333">
-                        <i class="f7-icons ios-only">home_fill</i>
-                        <i class="material-icons md-only ">home</i>Home</a>
-                </li>
-                <%if(program == "program1"){%>
-                    <li class="bg-color-black no-hairlines">
+        <div class="list links-list no-hairlines" style="margin-top:0px">
+            <ul class="menu">
+                <li class="accordion-item">
+                    <a href="#" class="item-content">
+                        <div class="item-inner">
+                            <div class="item-title">
+                                <i class="fa fa-home"></i>&nbsp;Home</div>
+                        </div>
+                    </a>
 
-                        <a href="#" class="panel-close text-color-white" id="findCoach-link" style="font-size: 15px;border-bottom: 1px solid #383333">
-                            <i class="f7-icons ios-only">persons_fill</i>
-                            <i class="material-icons md-only ">business</i>Book Care Coach</a>
-                    </li>
-                    <%}%>
+                </li>
+
+
+                <li class="accordion-item">
+                    <a href="#" class="item-content">
+                        <div class="item-inner">
+                            <div class="item-title">
+                                <i class="fa fa-user-md"></i>&nbsp;Request Coach</div>
+                        </div>
+                    </a>
+                </li>
+                <li class="accordion-item">
+                    <a href="#" class="item-content">
+                        <div class="item-inner">
+                            <div class="item-title">
+                                <i class="fa fa-sign-out"></i>&nbsp;Logout</div>
+                        </div>
+                    </a>
+
+                </li>
+
+
             </ul>
         </div>
+
     </div>
     <div class="views">
         <div class="view view-main <%=theme%>">
             <div class="pages">
                 <div data-page="home" class="page navbar-fixed toolbar-fixed">
                     <!-- Top Navbar-->
-                    <div class="navbar bg-color-black">
+                    <div class="navbar bg-color-blue">
                         <div class="navbar-inner">
                             <!-- Additional "left sliding" class -->
                             <div class="left sliding">
                                 <a href="#" class="link icon-only panel-open text-color-white" data-panel="left">
-                                    <i class="f7-icons ios-only">bars</i>
-                                    <i class="material-icons md-only">menu</i>
+                                    <!--<i class="f7-icons ios-only">bars</i>-->
+                                    <i class="material-icons">menu</i>
                                 </a>
                             </div>
                             <!-- Additional "center sliding" class -->
@@ -49,49 +66,92 @@
                                 <%=appname%>
                             </div>
                             <div class="right sliding">
-                                <img src="https://s3.eu-central-1.amazonaws.com/health-link-app-content/PfizerIcon.png ">
+                                <img src="https://s3.eu-central-1.amazonaws.com/health-link-app-content/LillyIcon.png">
                             </div>
                         </div>
                     </div>
                     <!-- /End of Top Navbar-->
-                    <div class="page-content bg-color-black" id="userhome-page">
-                        <div class="card demo-card-header-pic">
-                            <div style="background-image:url(https://s3.eu-central-1.amazonaws.com/health-link-app-content/ArthritisProgramImage.png)"
-                                class="card-header align-items-flex-end">
-                                <h2 style="font-family: 'Russo One', sans-serif;position: absolute;top:1px;left: 5px;">Explore</h2>
+
+                    <div class="page-content" id="userHome-page" style="background: url(https://www.drinkerbiddle.com/-/media/images/cropped/industries/healthcare.jpg) no-repeat">
+                        <div class="content-block" style="height: 100%;">
+                            <div class="row" style="height: 100%">
+                                <div class="col" style="width: 50%">
+                                    <div class="row">
+                                        <div class="bg-color-red tileCardTL" id="aboutUs-button">
+                                            <div class="tileContent icon-container">
+                                                <i class="fa fa-user-o mainIcon" aria-hidden="true"></i>
+                                            </div>
+                                            <div class="tileContent title-text">
+                                                <h6>About Us</h6>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class=" bg-color-blue tileCardML" id="requestCoach-button">
+                                            <div class="icon-container">
+                                                <i class="fa fa-user-md mainIcon" aria-hidden="true"></i>
+                                            </div>
+                                            <div class="tileContent title-text">
+                                                <h6>Request Coach</h6>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="bg-color-red tileCardBL" id="askQ-button">
+                                            <div class="icon-container">
+                                                <i class="fa fa-question-circle-o mainIcon" aria-hidden="true"></i>
+                                            </div>
+                                            <div class="tileContent title-text">
+                                                <h6>Ask Queries</h6>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                </div>
+                                <div class="col" style="width:50%">
+                                    <div class="row">
+                                        <div class=" bg-color-blue tileCardTR" id="prgms-button">
+                                            <div class="tileContent icon-container">
+                                                <i class="fa fa-hospital-o mainIcon" aria-hidden="true"></i>
+
+                                            </div>
+                                            <div class="tileContent title-text">
+                                                <h6>Our Programs</h6>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="bg-color-red tileCardMR" id="htip-button">
+                                            <div class="icon-container">
+                                                <i class="fa fa-heart-o mainIcon" aria-hidden="true"></i>
+                                            </div>
+                                            <div class="tileContent title-text">
+                                                <h6>Health Tip</h6>
+                                            </div>
+                                        </div>
+
+                                    </div>
+                                    <div class="row">
+
+                                        <div class="bg-color-blue tileCardBR" id="contact-button">
+                                            <div class="icon-container">
+                                                <i class="fa fa-phone-square mainIcon" aria-hidden="true"></i>
+                                            </div>
+                                            <div class="tileContent title-text">
+                                                <h6>Contact Us</h6>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                </div>
                             </div>
                         </div>
-                        <div class="card demo-card-header-pic" id="listProgram-button">
-                            <div style="background-image:url(https://media.istockphoto.com/photos/medicine-doctor-and-stethoscope-in-hand-touching-icon-medical-network-picture-id823767128?s=2048x2048)"
-                                class="card-header align-items-flex-end">
-                                <h2 style="font-family: 'Russo One', sans-serif;position: absolute;top:1px;left: 5px;">About Program</h2>
-                            </div>
-                        </div>
-                        <div class="card demo-card-header-pic" id="HomeToHireCoach-button">
-                            <div style="background-image:url(http://www.nursesathome.com.my/images/banner_04.jpg)" class="card-header align-items-flex-end">
-                                <h2 style="font-family: 'Russo One', sans-serif;position: absolute;top:1px;left: 5px;">Book Care Coach</h2>
-                            </div>
-                        </div>
-
-                        <div class="card demo-card-header-pic" id="feedback-button">
-                            <div style="background-image:url(http://whooshcare.com.au/wp-content/uploads/2015/04/Banner-feedback.jpg)" class="card-header align-items-flex-end">
-                                <h2 style="font-family: 'Russo One', sans-serif;position: absolute;top:1px;left: 5px;">FeedBack</h2>
-                            </div>
-                        </div>
-
-
-                        <div class="space0_1">
-                        </div>
-
                     </div>
-                    <%-include careCoach.ejs%>
 
-                        <%-include arthritisCare.ejs%>
 
-                            <%-include aboutArthritis.ejs%>
 
-                                <%-include treatArthritis.ejs%>
-                                    <%-include livingArthritis.ejs%>
+
+
 
 
                 </div>
