--- a/views/header.ejs
+++ b/views/header.ejs
@@ -12,6 +12,13 @@
       <link rel="stylesheet" href="/framework7/dist/css/framework7.min.css" />
       <link href="https://fonts.googleapis.com/css?family=Russo+One|Merienda|Scada|Pattaya|Nobile" rel="stylesheet">
       <style>
+            .no-margin-block {
+                  padding: 0 0 0 0 !important;
+                  margin: 0 0 0 0 !important;
+                  justify-content: center !important;
+                  text-align: center !important;
+            }
+
             .userprofile {
                   background: url(http://maxartkiller.in/website/maxsmart/max_smart/img/proflebg.png) no-repeat #5c6693;
                   background-size: 100%;
@@ -33,7 +40,9 @@
 
             }
 
-
+            .mycol-1-3 {
+                  width: 33.33vw;
+            }
 
             .tileCardTR {
                   justify-content: center;
@@ -202,8 +211,79 @@
                   margin: 0 0 0 0;
             }
 
+
+            .div-1 {
+                  height: 10vw;
+
+                  background-size: cover;
+                  background-position: center;
+                  color: #fff;
+                  padding: 0 0 0 0;
+                  margin: 0 0 0 0;
+            }
+
+            .div-2 {
+                  height: 20vw;
+
+                  background-size: cover;
+                  background-position: center;
+                  color: #fff;
+                  padding: 0 0 0 0;
+                  margin: 0 0 0 0;
+            }
+
+            .div-3 {
+                  height: 30vw;
+
+                  background-size: cover;
+                  background-position: center;
+                  color: #fff;
+                  padding: 0 0 0 0;
+                  margin: 0 0 0 0;
+            }
+
+            .div-4 {
+                  height: 40vw;
+
+                  background-size: cover;
+                  background-position: center;
+                  color: #fff;
+                  padding: 0 0 0 0;
+                  margin: 0 0 0 0;
+            }
+
+            .div-5 {
+                  height: 50vw;
+
+                  background-size: cover;
+                  background-position: center;
+                  color: #fff;
+                  padding: 0 0 0 0;
+                  margin: 0 0 0 0;
+            }
+
+            .div-6 {
+                  height: 60vw;
+
+                  background-size: cover;
+                  background-position: center;
+                  color: #fff;
+                  padding: 0 0 0 0;
+                  margin: 0 0 0 0;
+            }
+
             .demo-card-header-pic-banner-2 {
                   height: 80vw;
+                  width: 60vw;
+                  background-size: cover;
+                  background-position: center;
+                  color: #fff;
+                  padding: 0 0 0 0;
+                  margin: 0 0 0 0;
+            }
+
+            .demo-card-header-pic-banner-3 {
+                  height: 90vw;
                   width: 60vw;
                   background-size: cover;
                   background-position: center;
