--- a/views/user_home.ejs
+++ b/views/user_home.ejs
@@ -72,7 +72,7 @@
                     </div>
                     <!-- /End of Top Navbar-->
 
-                    <div class="page-content" id="userHome-page" style="background: url(https://www.drinkerbiddle.com/-/media/images/cropped/industries/healthcare.jpg) no-repeat;display:none">
+                    <div class="page-content" id="userHome-page" style="background: url(https://www.drinkerbiddle.com/-/media/images/cropped/industries/healthcare.jpg) no-repeat;">
                         <div class="content-block" style="height: 100%;">
                             <div class="row" style="height: 100%">
                                 <div class="col" style="width: 50%">
