--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,62 +1,64 @@
-<div class="row justify-content-center">
-<div class="row justify-content-center">
-    <div class="row">
-        <h3>Health Care and Support Pvt Ltd </h3>
-    </div>
+<div class="page-content" id="contact-page" style="display: none;">
     <div class="row justify-content-center">
-        <h4 style="margin:0 0 0 0;color:#888888">
-            #40,St Sebastian Garden, Varli,Mumbai
-        </h4>
-        <h4 style="margin:0 0 0 0;color:#888888">
-            P:(123) 444-1222
-        </h4>
+        <div class="row justify-content-center">
+            <div class="row">
+                <h3>Health Care and Support Pvt Ltd </h3>
+            </div>
+            <div class="row justify-content-center">
+                <h4 style="margin:0 0 0 0;color:#888888">
+                    #40,St Sebastian Garden, Varli,Mumbai
+                </h4>
+                <h4 style="margin:0 0 0 0;color:#888888">
+                    P:(123) 444-1222
+                </h4>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d118131.19322965517!2d73.18832565380859!3d22.293145134430983!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1418572558738"
+                style="border:0; width:800; height:200;" class="col-100 embed-responsive-item">
+            </iframe>
+        </div>
+        <div class="row">
+            <div class="row justify-content-center" style="width:100%;">
+                <h3 style="margin-bottom:0px ">We Are At Social</h3>
+            </div>
+            <div class="row justify-content-center" style="width:100%;">
+                <h4 style="margin:0 0 0 0;color:#888888">
+                    Get Connected to Social
+                </h4>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col">
+                    <div class="fab-buttons fab-buttons-center">
+                        <i class="fa fa-facebook" aria-hidden="true"></i>
+                    </div>
+
+                </div>
+                <div class="col">
+                    <div class="fab fab-morph">
+                        <i class="fa fa-facebook" aria-hidden="true"></i>
+                    </div>
+
+                </div>
+                <div class="col">
+                    <div class="fab fab-morph">
+                        <i class="icon f7-icons">add</i>
+                    </div>
+
+                </div>
+                <div class="col">
+                    <div class="fab fab-morph">
+                        <i class="icon f7-icons">add</i>
+                    </div>
+
+                </div>
+                <div class="col">
+                    <div class="fab fab-morph">
+                        <i class="icon f7-icons">add</i>
+                    </div>
+
+                </div>
+            </div>
+        </div>
     </div>
-</div>
-<div class="row justify-content-center">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d118131.19322965517!2d73.18832565380859!3d22.293145134430983!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1418572558738"
-        style="border:0; width:800; height:200;" class="col-100 embed-responsive-item">
-    </iframe>
-</div>
-<div class="row">
-    <div class="row justify-content-center" style="width:100%;">
-        <h3 style="margin-bottom:0px ">We Are At Social</h3>
-    </div>
-    <div class="row justify-content-center" style="width:100%;">
-        <h4 style="margin:0 0 0 0;color:#888888">
-            Get Connected to Social
-        </h4>
-    </div>
-    <div class="row justify-content-center">
-        <div class="col">
-            <div class="fab-buttons fab-buttons-center">
-                <i class="fa fa-facebook" aria-hidden="true"></i>
-            </div>
-
-        </div>
-        <div class="col">
-            <div class="fab fab-morph">
-                <i class="fa fa-facebook" aria-hidden="true"></i>
-            </div>
-
-        </div>
-        <div class="col">
-            <div class="fab fab-morph">
-                <i class="icon f7-icons">add</i>
-            </div>
-
-        </div>
-        <div class="col">
-            <div class="fab fab-morph">
-                <i class="icon f7-icons">add</i>
-            </div>
-
-        </div>
-        <div class="col">
-            <div class="fab fab-morph">
-                <i class="icon f7-icons">add</i>
-            </div>
-
-        </div>
-    </div>
-</div>
 </div>
