added login changes and home changes

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,64 +1,71 @@
 <div class="page-content" id="contact-page" style="display: none;">
-    <div class="row justify-content-center">
-        <div class="row justify-content-center">
-            <div class="row">
-                <h3>Health Care and Support Pvt Ltd </h3>
-            </div>
-            <div class="row justify-content-center">
-                <h4 style="margin:0 0 0 0;color:#888888">
-                    #40,St Sebastian Garden, Varli,Mumbai
-                </h4>
-                <h4 style="margin:0 0 0 0;color:#888888">
-                    P:(123) 444-1222
-                </h4>
-            </div>
-        </div>
-        <div class="row justify-content-center">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d118131.19322965517!2d73.18832565380859!3d22.293145134430983!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1418572558738"
-                style="border:0; width:800; height:200;" class="col-100 embed-responsive-item">
-            </iframe>
-        </div>
+    <div class="block no-margin-block">
         <div class="row">
-            <div class="row justify-content-center" style="width:100%;">
-                <h3 style="margin-bottom:0px ">We Are At Social</h3>
+            <div class="col demo-card-header-pic-banner-2">
+                <img src="http://www.worleyco.com/wp-content/uploads/2015/06/Contact-Us.jpg" alt="" height="100%" width="100%">
             </div>
-            <div class="row justify-content-center" style="width:100%;">
-                <h4 style="margin:0 0 0 0;color:#888888">
-                    Get Connected to Social
-                </h4>
+        </div>
+        <div class="row justify-content-center">
+            <div class="row justify-content-center" style="margin-bottom: 10px;">
+                <div class="row">
+                    <h3>Health Care and Support Pvt Ltd </h3>
+                </div>
+                <div class="row justify-content-center">
+                    <h4 style="margin:0 0 0 0;color:#888888">
+                        #40,St Sebastian Garden, Varli,Mumbai
+                    </h4>
+                    <h4 style="margin:0 0 0 0;color:#888888">
+                        P:(123) 444-1222
+                    </h4>
+                </div>
             </div>
             <div class="row justify-content-center">
-                <div class="col">
-                    <div class="fab-buttons fab-buttons-center">
-                        <i class="fa fa-facebook" aria-hidden="true"></i>
-                    </div>
-
+                <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d118131.19322965517!2d73.18832565380859!3d22.293145134430983!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1418572558738"
+                    style="border:0; width:800; height:200;" class="col-100 embed-responsive-item">
+                </iframe>
+            </div>
+            <div class="row" style="margin-top:10px;margin-bottom: 30px;">
+                <div class="row justify-content-center" style="width:100%;">
+                    <h3 style="margin-bottom:0px ">We Are At Social</h3>
                 </div>
-                <div class="col">
-                    <div class="fab fab-morph">
-                        <i class="fa fa-facebook" aria-hidden="true"></i>
-                    </div>
-
+                <div class="row justify-content-center" style="width:100%;">
+                    <h4 style="margin:0 0 0 0;color:#888888">
+                        Get Connected to Social
+                    </h4>
                 </div>
-                <div class="col">
-                    <div class="fab fab-morph">
-                        <i class="icon f7-icons">add</i>
-                    </div>
+                <div class="row justify-content-center" style="width: 100%;margin-top: 10px;">
+                    <div class="col justify-content-center">
+                        <div class="div-fab" style="background:#09489e">
+                            <a href="#" style="color:#fff">
+                                <i class="fa fa-facebook" aria-hidden="true"></i>
+                            </a>
+                        </div>
 
-                </div>
-                <div class="col">
-                    <div class="fab fab-morph">
-                        <i class="icon f7-icons">add</i>
                     </div>
-
-                </div>
-                <div class="col">
-                    <div class="fab fab-morph">
-                        <i class="icon f7-icons">add</i>
+                    <div class="col justify-content-center">
+                        <div class="div-fab " style="background:#01acec">
+                            <a href="#" style="color:#fff">
+                                <i class="fa fa-twitter" aria-hidden="true"></i>
+                            </a>
+                        </div>
                     </div>
+                    <div class="col">
+                        <div class="div-fab" style="background:#ec2828">
+                            <a href="#" style="color:#fff">
+                                <i class="fa fa-google-plus" aria-hidden="true"></i>
+                            </a>
+                        </div>
 
+                    </div>
+                    <div class="col">
+                        <div class="div-fab" style="background:#b40000">
+                            <a href="#" style="color:#fff">
+                                <i class="fa fa-pinterest-p" aria-hidden="true"></i>
+                            </a>
+                        </div>
+
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
