--- a/views/login.ejs
+++ b/views/login.ejs
@@ -53,7 +53,7 @@
           </div>
           <div class="block-footer">
             <ul>
-              <button class="col button button-outline color-blue">Sign Up</button>
+              <button class="col button button-outline color-blue" id="signup-btn">Sign Up</button>
             </ul>
 
           </div>
