--- a/views/header.ejs
+++ b/views/header.ejs
@@ -166,6 +166,18 @@
                   width: 100%;
             }
 
+            .div-fab {
+                  width: 53px;
+                  height: 53px;
+                  background-color: rgba(0, 0, 0, .1);
+                  font-size: 20px;
+                  border-radius: 100%;
+
+                  justify-content: center;
+                  align-content: center;
+                  text-align: center;
+                  line-height: 56px;
+            }
 
 
             .num-wrap-rule {
