tiles color changes

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -61,6 +61,14 @@
 
             }
 
+            .ios-bg-red {
+                  background-color: #f44336 !important;
+            }
+
+            .ios-bg-blue {
+                  background-color: #2d88ea !important;
+            }
+
             .tileCardML {
                   justify-content: center;
                   width: 100%;
