--- a/views/carecoach_home.ejs
+++ b/views/carecoach_home.ejs
@@ -18,7 +18,7 @@
         <li>
           <a href="#" class="panel-close" id="client-link">
             <i class="f7-icons ios-only">list</i>
-            <i class="material-icons md-only ">list_alt</i>Client List</a>
+            <i class="material-icons md-only ">list_alt</i>Patients List</a>
         </li>
         <li>
           <a href="#" class="panel-close" id="logout-link">
@@ -54,10 +54,10 @@
             <div class="card demo-card-header-pic">
               <div style="background-image:url(https://s3.eu-central-1.amazonaws.com/health-link-app-content/CareCoachProgramImage.png)"
                 class="card-header align-items-flex-end">
-                <p style="color:black">My Clients</p>
+                <p style="color:black">My Patients</p>
               </div>
               <div class="card-content card-content-padding">
-                <p> List of clients with medical details
+                <p> List of patients with medical details
                 </p>
                 <a href="#" class="col button button-big button-raised button-fill color-blue" style="margin-bottom:10px" id="list-button">Get List</a>
               </div>
@@ -79,7 +79,7 @@
                       <div class="item-inner">
                         <div class="item-title">
                           <div class="item-header">Name</div>
-                          |
+                          
                           <%=clients[key]['fname']+" "+clients[key]['lname']%>
                         </div>
                         <div class="item-after">Details</div>
